# backup-projects

./: .gitignore  AGENTS.md  AI_WORKFLOW.md  ARCHITECTURE.md  CONTRIBUTING_AI.md  DEFINITION_OF_DONE.md  LICENSE  Makefile  README.md  ROADMAP.md  TASKS.md  config.py  pyproject.toml  requirements.txt
.ai/checklists/: backend_task_checklist.md  cli_task_checklist.md  (+2 more)
config/: app.example.yaml  rules.example.yaml
docs/: cli.md  deployment.md  policy.md  tdz_v1.md  web_ui.md
scripts/: cron_daily.example  cron_weekly.example  dev_run_cli.sh  dev_run_web.sh
tests/: test_backup_cli.py  test_backup_job.py  test_backup_service.py  test_bootstrap.py  test_cli_app.py  test_cli_groups.py  test_command_runner.py  test_config_loader.py  test_converters.py  test_daily_job_integration.py  test_db_bootstrap.py  test_db_foundation.py  test_decision_engine.py  test_dir_listing.py  test_domain_enums.py  test_domain_models.py  test_dry_run_cli.py  test_dry_run_service.py  test_exclude_matcher.py  test_extension_policy_service.py  test_file_finder.py  test_file_lock.py  test_file_stat_service.py  test_files_cli.py  test_locking_integration.py  test_logging_setup.py  test_manifest_builder.py  test_manual_include_sample_tree.py  test_manual_include_scan_service.py  test_path_utils.py  test_placeholder_services.py  test_post_backup_archive_service.py  test_project_dir_scan_sample_tree.py  test_project_dir_scan_service.py  test_report_delivery_service.py  test_report_service.py  test_repositories.py  test_restic_adapter.py  test_restic_adapter_mock.py  test_restic_runner.py  (+24 more)
(+132 files in other folders)
